--- a/src/components/Button.scss
+++ b/src/components/Button.scss
@@ -12,6 +12,17 @@ $pink: #f06595;
     &:active {
         background: darken($color, 10%);
     }
+
+    &.outline {
+        color: $color;
+        background: none;
+        border: 1px solid $color;
+
+        &:hover {
+            background: $color;
+            color: white;
+        }
+    }
 }
 
 .Button {
@@ -63,5 +74,15 @@ $pink: #f06595;
 
     &+& {
         margin-left: 1rem;
+    }
+
+    &.fullWidth {
+        width: 100%;
+        justify-content: center;
+
+        &+& {
+            margin-left: 0;
+            margin-top: 1rem;
+        }
     }
 }
